Rounded ingredient amounts and fixed spacing

--- a/src/pages/Recipe.css
+++ b/src/pages/Recipe.css
@@ -124,6 +124,7 @@ div.container {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 #noSub {
